# kwanix

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  full_system_architecture_plan.txt
apps/api/: .dockerignore  Dockerfile  Dockerfile.prod  Dockerfile.staging  alembic.ini  pyproject.toml  seed_db.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_all_tables.py  0002_enable_rls_policies.py  0003_fix_rls_integer_cast.py  0004_add_brand_color_to_companies.py  0005_online_booking.py  0006_add_parcel_transition_timestamps.py  0007_add_webhook_event_retry_queue.py  0008_add_ticket_reminder_sent_at.py  0009_add_parcel_declared_value.py  0010_add_trip_stops.py  0011_add_user_sms_opt_out.py  0012_add_weight_tiers_and_ticket_email.py  0013_vehicle_maintenance_and_parcel_return_reason.py  0014_add_ticket_refund_ref.py  0015_add_station_city.py  0016_add_company_max_parcel_weight.py  0017_add_ticket_indexes.py  0018_add_company_sla_threshold.py  0019_add_missing_fk_indexes.py  0020_add_subscription_billing.py  0024_add_vehicle_gps.py  (+11 more)
apps/api/app/: config.py  database.py  main.py
apps/api/tests/: conftest.py  test_api_endpoints.py  test_auth_service.py  test_billing.py  test_driver.py  test_livetrack.py  test_mvp_hardening.py  test_otp_service.py  test_parcel_service.py  test_payments.py  test_phase_j.py  test_phase_l.py  test_phase_m.py  test_phone.py  test_public_booking.py  test_rate_limiting.py  test_sms.py  test_tenant_isolation.py  test_tracking_number.py  test_trips_tickets.py
(+225 files in other folders)
